syntax = "proto3";
package addressbook;



message Id {
  int32 id = 1;
}

message Person {
  string name = 1;
  int32 id = 2;  // Unique ID number for this person.
  string email = 3;

  enum PhoneType {
    MOBILE = 0;
    HOME = 1;
    WORK = 2;
  }

  message PhoneNumber {
    string number = 1;
    PhoneType type = 2;
  }

  repeated PhoneNumber phones = 4;
}


message Limit {
  int32 start = 1;
  int32 end = 2;
}

message AddressBook {
  repeated Person people = 1;
}
// [END messages]

message MsgReply{
  string message = 1;
}


service AddressServer {
  rpc SavePerson(Person)  returns (MsgReply) {}
  rpc DelePerson(Id)   returns (MsgReply) {}
  rpc GetPersion(Id) returns (Person) {}
  rpc GetAddrBook(Limit) returns (AddressBook) {}
}
